--- a/lib/stackprof-webnav/views/layout.haml
+++ b/lib/stackprof-webnav/views/layout.haml
@@ -7,3 +7,6 @@
     .row
       .large-12.columns
         = yield
+    %script(src="/assets/jquery.min.js")
+    %script(src="/assets/jquery.ex-table-filter.js")
+    %script(src="/assets/app.js")
